# HYZL-Tauri

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/script/: get-tauri-version.cjs
.github/workflows/: check-every-commit.yml  ci-build.yml  release.yml  sync-to-gitee.yml  test.yml
.husky/: pre-push
backup/: 头图宽高规范.txt
public/: splashscreen.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/entity/: hyzl_path.rs  mod.rs  return_data.rs  student.rs
src-tauri/src/init/: windows.rs
src-tauri/src/page/: mod.rs
src-tauri/src/page/issue_fix/: issue_fix.rs  mod.rs
src-tauri/src/page/start/: start.rs
src-tauri/src/start_page/: start.rs
src-tauri/src/utils/: cmd_command.rs  mod.rs  string_utils.rs
src/assets/: main.css
src/component/: AnnouncementModal.vue  NormalContent.vue  QQNTInstall.vue  UpdateModal.vue
src/entity/: hyzlPath.ts  response.ts
src/init/: init.ts
src/router/: index.ts
src/utils/: checkProcessExist.ts  checkProgramExist.ts  fastCommand.ts
src/views/: AboutPage.vue  DebugPage.vue  DownloadPage.vue  IndexPage.vue  IssueFix.vue  NormalContent.vue  PluginPage.vue  SettingsPage.vue  SideBar.vue  StartPage.vue
update/: update.cjs  update.json
